# CppCommonPitfalls

./: 1_conversion.cpp  6_implicit_fallthrough.cpp  CMakeLists.txt  conversion.cpp  readme.md  return_type.cpp  shadow.cpp  sign_compare.cpp  tools.md  unused.cpp
